# micro-dsp32

./: .gitignore  .gitmodules
firmware/: CMakeLists.txt  sdkconfig  sdkconfig.old
firmware/main/: CMakeLists.txt  audio.c  audio.h  config.c  config.h  debug_audio.c  debug_audio.h  micro-dsp32.c  webserver.c  webserver.h  wifi.c  wifi.h
webapp/: astro.config.mjs  package-lock.json  package.json  tsconfig.json
webapp/src/: chart.ts  dsp.ts  global.ts  index.html  utils.ts
webapp/src/components/: Button.astro  IconButton.astro  LabelInput.astro  LabelSelect.astro  LabelTextInput.astro  Modal.astro  SettingsModal.astro
webapp/src/components/Button/: index.astro
webapp/src/components/Modal/: index.astro
webapp/src/components/XPass/: index.astro  script.ts
webapp/src/layouts/: default.astro
webapp/src/pages/: index.astro
